--- a/styles/style.css
+++ b/styles/style.css
@@ -103,7 +103,8 @@ hr {
 
 .services {
   display: flex;
-  justify-content: space-around;
+  gap: 100px;
+  justify-content: center;
   margin: 30px 100px;
 }
 
@@ -147,8 +148,9 @@ hr {
 
 .gallery {
   display: flex;
-  justify-content: space-between;
+  gap: 100px;
   align-items: center;
+  justify-content: center;
 }
 
 .gallery-content {
@@ -170,8 +172,52 @@ hr {
 .gallery-image img {
   width: 600px;
   height: 450px;
+  border-radius: 10px;
 }
 
 .free-space {
   margin: 100px 0px;
+}
+
+/* Update Styles */
+
+.update {
+  text-align: center;
+  max-width: 800px;
+  margin: auto;
+}
+
+.area {
+  display: flex;
+  align-items: center;
+  padding: 50px 200px;
+  background-color: #fff4d6;
+  text-align: center;
+  margin-bottom: 100px;
+}
+
+#email-box {
+  height: 52px;
+  width: 400px;
+}
+
+/* Footer Styles */
+
+.footer {
+  width: 100%;
+  height: 200px;
+  background-color: #0b0d17;
+  text-align: center;
+}
+
+.footer h1 {
+  font-weight: 700;
+  color: #ff5959;
+  padding-top: 60px;
+  font-style: italic;
+  margin-bottom: 30px;
+}
+
+.footer p {
+  color: white;
 }
