fix Other Amount and Subscrip section

--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@
 .header {
   background-image: url("../images/donation13.jpg");
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
 }
 
 .header-content {
@@ -59,37 +59,39 @@
   margin-bottom: 50px;
 }
 
-.donate-amonut ul {
+.buttons {
   display: flex;
   justify-content: space-around;
   margin-bottom: 50px;
 }
 
-.donate-amonut ul li {
-  list-style: none;
+.amounts {
   border-radius: 5px;
   padding: 40px 0px;
   width: 135px;
-  font-weight: 1000;
+  font-weight: 900;
   font-size: 30px;
   background-color: #ebecec;
   color: #4b4848;
   border: 2px solid white;
 }
 
-.donate-amonut ul li:hover {
+.amounts:hover {
   background-color: #f5e0e0;
   border: 2px solid #e77979;
 }
 .other-amount {
   color: #9c9c9c;
   font-size: 20px;
-  margin: 10px;
-}
-
-hr {
+  border-bottom: 1px solid grey;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  outline: none;
+  height: 40px;
+  width: 800px;
+  text-align: center;
   margin-bottom: 30px;
-  color: #a3a1a1;
 }
 
 /* donate plan styles */
@@ -197,8 +199,21 @@ hr {
 }
 
 #email-box {
-  height: 52px;
-  width: 400px;
+  height: 50px;
+  width: 450px;
+  border: 0;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  outline: none;
+  padding-left: 10px;
+  font-size: 20px;
+}
+
+.subscription .btn-primary {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border: 0;
+  height: 50px;
 }
 
 /* Footer Styles */
@@ -211,11 +226,10 @@ hr {
 }
 
 .footer h1 {
-  font-weight: 700;
+  font-family: "lobster", Courier, monospace;
   color: #ff5959;
-  padding-top: 60px;
-  font-style: italic;
-  margin-bottom: 30px;
+  margin: 30px 0px;
+  padding-top: 50px;
 }
 
 .footer p {
