--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,8 @@
 .btn-primary {
   background-color: #ff5959;
   border: 0;
-  padding: 15px 25px;
+  height: 60px;
+  padding: 0px 30px;
   border-radius: 5px;
   font-weight: 600;
   font-size: 20px;
